docs/_static/style.css
/* ... */
span.pre {
  padding: 0 2px;
}

dl.class {
  margin-bottom: 50px;
}

dl.describe > dt,
dl.function > dt,
dl.attribute > dt,
dl.classmethod > dt,
dl.method > dt,
dl.class > dt,
dl.exception > dt {
  background-color: var(--api-entry-background);
  padding: 1px 10px;
}

dd {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  margin-left: 1.5em;
}


.container.operations {
  padding: 10px;
  border: 1px solid var(--codeblock-border);
  margin-bottom: 20px;
}

.container.operations::before {
  content: 'Supported Operations';
  color: var(--main-big-headers-text);
  display: block;
  padding-bottom: 0.5em;
}

.container.operations > dl.describe > dt {
  background-color: var(--api-entry-background);
}

table.docutils {
  width: 100%;
}

table.docutils.footnote {
  width: auto;
}

table.docutils thead,
table.docutils tfoot {
  background: var(--table-header-background);
}

table.docutils thead tr th {
  color: var(--table-text);
  font-weight: normal;
  padding: 7px 5px;
  vertical-align: middle;
}

table.docutils tbody tr th,
table.docutils tbody tr td {
  border-bottom: 0;
  border-top: solid 1px var(--table-border);
  padding: 7px 5px;
  vertical-align: top;
}
table.docutils tbody tr:last-child th,
table.docutils tbody tr:last-child td {
  border-bottom: solid 1px var(--table-border);
}

table.docutils thead tr td p,
table.docutils tfoot tr td p,
table.docutils tbody tr td p,
table.docutils thead tr td ul,
table.docutils tfoot tr td ul,
table.docutils tbody tr td ul,
table.docutils thead tr td ol,
table.docutils tfoot tr td ol,
table.docutils tbody tr td ol {
  margin: 0 0 .5em;
}
table.docutils thead tr td p.last,
table.docutils tfoot tr td p.last,
table.docutils tbody tr td p.last,
table.docutils thead tr td ul.last,
table.docutils tfoot tr td ul.last,
table.docutils tbody tr td ul.last,
table.docutils thead tr td ol.last,
table.docutils tfoot tr td ol.last,
table.docutils tbody tr td ol.last {
  margin-bottom: 0;
}

/* hide the welcome text */
section#welcome-to-discord-py > h1 {
  display: none;
}

/* make the RTD ad look a little less jarring */

.ethical-fixedfooter {
  background-color: var(--rtd-ad-background) !important;
  border-top: 1px solid var(--rtd-ad-border) !important;
}

.ethical-fixedfooter a {
  color: rgb(var(--rtd-ad-text-rgb)) !important;
}

.ethical-callout a {
  color: rgba(var(--rtd-ad-text-rgb), 0.7) !important;
}

.active {
  background-color: var(--mobile-active-toc);
  border-left: 5px solid var(--mobile-active-toc);
}

div.code-block-caption {
  font-size: medium;
  font-weight: bold;
}


/* desktop stuff */

@media screen and (min-width: 600px) {
  .grid-item {
    max-width: unset;
  }

  .main-grid {
    grid-template-areas:
      "h h h h h h"
      "n n n n n n"
      "s c c c c c"
      "s f f f f f";
  }

  header {
    background-color: var(--primary-accent);
  }

  header > nav {
    justify-content: flex-end;
  }

  .main-heading {
    margin-right: auto;
    display: unset;
  }

  header > nav a:not(.main-heading) {
    margin: 0 0.5em;
  }

  .sub-header {
    display: flex;
    align-items: center;
  }

  .sub-header > label {
    display: initial;
  }

  .sub-header > select {
    display: initial;
    margin-right: auto;
  }

  .sub-header > .settings {
    display: initial;
  }

  aside {
    top: initial;
    position: initial;
    background-color: var(--nav-background);
    color: var(--nav-text);
  }

  aside h3 {
    color: var(--nav-header-text);
  }

  #sidebar {
    display: inline-block;
    position: sticky;
    top: 1em;
    height: calc(100vh - 1em);
    overflow-y: auto;
    margin: 1em;
  }

  #sidebar a {
    color: var(--nav-text);
  }

  .active {
    background-color: transparent;
    border-left: none;
    position: relative;
  }

  .active::before {
    content: "";
    display: inline-block;
    background-color: var(--active-toc);
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    width: calc(100% + 0.5em);
    border-radius: 4px;
    z-index: -1;
  }

  #sidebar a:hover {
    color: var(--nav-hover-text);
  }

  #hamburger-toggle, #settings-toggle {
    display: none;

  }
}

@media screen and (min-width: 1200px) {
  .main-grid {
    /* 62.5% width => multiple of 5/8 content */
    /* sidebar takes up 20% of the inner area */
    grid-template-columns: repeat(16, 1fr);
    grid-template-areas:
      "h h h h h h h h h h h h h h h h"
      "n n n n n n n n n n n n n n n n"
      "s s . . . c c c c c c c c . . ."
      "s s f f f f f f f f f f f f f f"
  }

  header > nav {
    margin-left: 18.75%;
    margin-right: 18.75%;
  }

  .sub-header > label {
    margin-left: 18.75%;
    margin-right: 1em;
  }

  .sub-header > .settings {
    margin-right: 18.75%;
    margin-left: 1em;
  }

  .sub-header > .search {
    width: 20%;
  }

  .sub-header .fa-cog {
    font-size: 1.5em;
  }

  main img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

